fixed css to display extension with correct sizing, and removed overflow scroll bars

--- a/client/src/media/main.css
+++ b/client/src/media/main.css
@@ -97,3 +97,6 @@ section button {
         background-color: var(--dark-foreground);
     }
 }
+html, body, nav, main {
+    max-height: 300px;
+}
